--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
             <div class="container1"></div>
             <div class="container2">
                 <div class="stories">
-                    <div class="cardd"></div>
-                    <div class="cardd"></div>
+                    <div class="cardd" style="background: url(../social-site/image/a\ girl\ with\ hat.jpg) no-repeat center center/cover;"> <h3>Jenney</h3></div>
+                    <div class="cardd" style="border-style: dotted;"></div>
                     <div class="cardd"></div>
                     <div class="cardd"></div>
                 </div>
